[tool.poetry]
name = "diff-fusion"
version = "0.1.0"
description = ""
authors = ["Kevin Wang <kevmo314@gmail.com>"]
readme = "README.md"
packages = [{include = "diff_fusion"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
torch = "^1.12.1"
imageio = "^2.22.0"
torchvision = "^0.13.1"
tensorboard = "^2.10.1"
opencv-python = "^4.6.0.66"
tqdm = "^4.64.1"
matplotlib = "^3.6.0"
imageio-ffmpeg = "^0.4.7"
transformers = "^4.22.2"
ConfigArgParse = "^1.5.3"
ftfy = "^6.1.1"
diffusers = "^0.3.0"

[tool.poetry.scripts]
start = "diff_fusion.main:main"
nerf = "run_nerf:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
